--- a/app/src/main/res/layout/activity_stats_page.xml
+++ b/app/src/main/res/layout/activity_stats_page.xml
@@ -92,11 +92,16 @@
         android:id="@+id/exitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="157dp"
+        android:layout_marginLeft="157dp"
         android:layout_marginTop="93dp"
+        android:layout_marginEnd="166dp"
+        android:layout_marginRight="166dp"
         android:layout_marginBottom="173dp"
         android:fontFamily="times new roman"
         android:text="exit"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        tools:layout_editor_absoluteX="157dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 </androidx.constraintlayout.widget.ConstraintLayout>
