completed model java classes, added todo to remove reference to template result model record.

--- a/app/src/main/res/layout/activity_stats_page.xml
+++ b/app/src/main/res/layout/activity_stats_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StatsPage">
+    tools:context=".StatsPageActivity">
 
     <ImageView
         android:id="@+id/title_image4"
