Fleshed out registration model and added widgets to create account activity in order to add functionality to create account page.

--- a/app/src/main/res/layout/activity_quiz_login.xml
+++ b/app/src/main/res/layout/activity_quiz_login.xml
@@ -94,7 +94,7 @@
         app:srcCompat="@drawable/geo_quiz_title" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
