--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateAccountActivity">
+    tools:context=".ui.register.CreateAccountActivity">
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/title_image3"
         android:layout_width="318dp"
         android:layout_height="104dp"
         android:layout_marginStart="32dp"
@@ -21,23 +21,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/geo_quiz_title" />
 
+
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/firstNameTextView"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
         android:layout_marginLeft="47dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="284dp"
         android:layout_marginRight="284dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="times new roman"
         android:text="First Name"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/firstNameEdit"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/title_image3" />
 
     <EditText
         android:id="@+id/firstNameEdit"
@@ -45,23 +47,26 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
         android:layout_marginLeft="47dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="172dp"
         android:layout_marginRight="172dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="times new roman"
         android:hint="@string/prompt_first"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintBottom_toTopOf="@+id/registerError"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/firstNameTextView" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/lastNameTextView"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
         android:layout_marginLeft="47dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="284dp"
         android:layout_marginRight="284dp"
         android:layout_marginBottom="8dp"
@@ -70,8 +75,9 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/lastNameEdit"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/firstNameEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/registerError" />
 
     <EditText
         android:id="@+id/lastNameEdit"
@@ -79,33 +85,37 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
         android:layout_marginLeft="47dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="172dp"
         android:layout_marginRight="172dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="times new roman"
         android:hint="@string/prompt_last"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/registerError2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/lastNameTextView" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/emailTextView"
         android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
         android:layout_marginLeft="47dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="236dp"
         android:layout_marginRight="236dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="times new roman"
         android:text="Email Address"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/emailEditText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lastNameEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/registerError2" />
 
     <EditText
         android:id="@+id/emailEditText"
@@ -113,72 +123,79 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
         android:layout_marginLeft="47dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="108dp"
         android:layout_marginRight="108dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:ems="10"
         android:fontFamily="times new roman"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/registerError3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/passwordTextView"
         android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
         android:layout_marginLeft="47dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="236dp"
         android:layout_marginRight="236dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="times new roman"
         android:text="Password"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/registerError3" />
 
     <EditText
         android:id="@+id/passwordEditText"
         android:layout_width="256dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="47dp"
         android:layout_marginLeft="47dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="108dp"
         android:layout_marginRight="108dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:ems="10"
         android:fontFamily="times new roman"
         android:hint="@string/prompt_password"
         android:inputType="textPassword"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/registerError4"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/passwordRepeatTextView"
         android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
         android:layout_marginLeft="47dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="236dp"
         android:layout_marginRight="236dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="times new roman"
         android:text="Repeat Password"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/passwordRepeatEditText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/registerError4" />
 
     <EditText
         android:id="@+id/passwordRepeatEditText"
@@ -186,97 +203,108 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
         android:layout_marginLeft="47dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="108dp"
         android:layout_marginRight="108dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:ems="10"
         android:fontFamily="times new roman"
         android:hint="@string/prompt_password"
         android:inputType="textPassword"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/registerButton"
+        app:layout_constraintBottom_toTopOf="@+id/registerError5"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
+        app:layout_constraintTop_toBottomOf="@+id/passwordRepeatTextView" />
 
     <TextView
         android:id="@+id/registerError"
         android:layout_width="256dp"
-        android:layout_height="wrap_content"
+        android:layout_height="14sp"
         android:layout_marginStart="46dp"
         android:layout_marginLeft="46dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="109dp"
         android:layout_marginRight="109dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="times new roman"
         android:textSize="8sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintBottom_toTopOf="@+id/lastNameTextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstNameEdit" />
 
     <TextView
         android:id="@+id/registerError2"
         android:layout_width="256dp"
-        android:layout_height="wrap_content"
+        android:layout_height="14sp"
         android:layout_marginStart="47dp"
         android:layout_marginLeft="47dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="108dp"
         android:layout_marginRight="108dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="times new roman"
         android:textSize="8sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/emailTextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lastNameEdit" />
 
     <TextView
         android:id="@+id/registerError3"
         android:layout_width="256dp"
-        android:layout_height="wrap_content"
+        android:layout_height="14sp"
         android:layout_marginStart="46dp"
         android:layout_marginLeft="46dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="109dp"
         android:layout_marginRight="109dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="times new roman"
         android:textSize="8sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
     <TextView
         android:id="@+id/registerError4"
         android:layout_width="256dp"
-        android:layout_height="wrap_content"
+        android:layout_height="14sp"
         android:layout_marginStart="47dp"
         android:layout_marginLeft="47dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="108dp"
         android:layout_marginRight="108dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="times new roman"
         android:textSize="8sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/passwordRepeatTextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
 
     <TextView
         android:id="@+id/registerError5"
         android:layout_width="256dp"
-        android:layout_height="wrap_content"
+        android:layout_height="14sp"
         android:layout_marginStart="46dp"
         android:layout_marginLeft="46dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="109dp"
         android:layout_marginRight="109dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="16dp"
         android:fontFamily="times new roman"
         android:textSize="8sp"
         app:layout_constraintBottom_toTopOf="@+id/registerButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordRepeatEditText" />
 
@@ -288,11 +316,12 @@
         android:layout_marginLeft="160dp"
         android:layout_marginEnd="161dp"
         android:layout_marginRight="161dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="28dp"
         android:fontFamily="times new roman"
         android:text="@string/register_short"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 
